ass1_1 written but some errors

--- a/ass1/assignment_1_1.ipynb
+++ b/ass1/assignment_1_1.ipynb
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,8 @@
     "#                 running_loss = 0.0\n",
     "        loss_store[epoch] = running_loss\n",
     "    plt.plot(loss_store)\n",
-    "    plt.show()"
+    "    plt.show()\n",
+    "    print('Finished Training')"
    ]
   },
   {
