--- a/ass1/Untitled1.ipynb
+++ b/ass1/Untitled1.ipynb
@@ -24,19 +24,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "187\n"
+      "<type 'instance'>\n",
+      "(28, 28)\n",
+      "(28, 28)\n",
+      "[[  0   0   0   0   0   0   1   0  13 154 236 255 253 254 255 229  18   0\n",
+      "    1   0   0   0   0   0   0   0   0   0]\n",
+      " [  0   0   0   0   0   0   0   0   1   0  30 196 255 252 252 255 104   0\n",
+      "    3   0   0   0   0   0   0   0   0   0]\n",
+      " [  0   0   0   0   0   0   0   0   0   3   0  29 232 255 251 255 207   4\n",
+      "    0   1   0   0   0   0   0   0   0   0]\n",
+      " [  0   0   0   0   0   0   0   0   0   0   5   0 129 255 252 253 255  80\n",
+      "    0   3   0   0   0   0   0   0   0   0]\n",
+      " [  0   0   0   0   0   0   0   0   0   0   2   0  67 255 254 252 255 184\n",
+      "    0   1   0   0   0   0   0   0   0   0]\n",
+      " [  0   0   0   0   0   0   0   0   0   0   3   0 142 255 252 255 255 255\n",
+      "   56   0   2   0   0   0   0   0   0   0]\n",
+      " [  0   0   0   0   0   0   0   0   0   1   0  21 231 255 250 255 252 255\n",
+      "  159   0   3   0   0   0   0   0   0   0]\n",
+      " [  0   0   0   0   0   0   0   0   0   4   0 106 255 252 255 254 254 255\n",
+      "  243  35   0   2   0   0   0   0   0   0]\n",
+      " [  0   0   0   0   0   0   0   0   0   0   0 206 255 136 171 255 254 251\n",
+      "  255 133   0   4   0   0   0   0   0   0]\n",
+      " [  0   0   0   0   0   0   0   0   3   0  68 255 105   0   0 175 255 251\n",
+      "  255 227  18   0   1   0   0   0   0   0]\n",
+      " [  0   0   0   0   0   0   0   0   2   0 179 225   3   5   0  65 255 254\n",
+      "  251 255 106   0   4   0   0   0   0   0]\n",
+      " [  0   0   0   0   0   0   0   2   0  38 255 109   0   4   1   0 193 255\n",
+      "  250 255 208   5   0   1   0   0   0   0]\n",
+      " [  0   0   0   0   0   0   0   4   0 146 240  12   0   1   3   0  91 255\n",
+      "  252 253 255  81   0   3   0   0   0   0]\n",
+      " [  0   0   0   0   0   0   1   0  16 245 131   0   4   0   1   0  10 215\n",
+      "  255 250 255 185   0   1   0   0   0   0]\n",
+      " [  0   0   0   0   0   0   4   0 112 251  26   0   2   0   0   3   0 118\n",
+      "  255 252 255 255  57   0   2   0   0   0]\n",
+      " [  0   0   0   0   0   1   0   0 222 156   0   3   0   0   0   1   0  26\n",
+      "  233 255 251 255 160   0   3   0   0   0]\n",
+      " [  0   0   0   0   0   3   0  81 255  45   0   2   0   0   0   0   3   0\n",
+      "  144 255 251 255 243  36   0   2   0   0]\n",
+      " [  0   0   0   0   0   1   0 200 185   0   2   0   0   0   4   5   7   0\n",
+      "   48 249 255 251 255 134   0   4   0   0]\n",
+      " [  0   0   0   0   3   0  59 255  69   0   3   0   0   1   0   0   0   2\n",
+      "    0 161 255 250 255 228  19   0   1   0]\n",
+      " [  0   0   0   0   3   0 177 210   0   0   1   0   0   5 104 125 120 123\n",
+      "  113 167 255 253 252 255 108   0   3   0]\n",
+      " [  0   0   0   2   0  39 255  95   0   3   0   3   0  76 255 253 255 255\n",
+      "  255 255 255 254 253 255 209   5   0   1]\n",
+      " [  0   0   0   3   0 152 232   8   0   1   0   1   0  31  57  50  51  51\n",
+      "   53  43 114 255 254 253 255  82   0   3]\n",
+      " [  0   0   1   0  22 249 124   0   3   0   0   0   0   0   0   0   0   0\n",
+      "    1   0   5 208 255 250 255 187   0   1]\n",
+      " [  0   0   4   0 128 248  24   0   2   0   0   0   0   1   3   3   3   3\n",
+      "    3   6   0 106 255 252 254 255  58   0]\n",
+      " [  0   3   0  26 244 200   0   5   0   0   0   0   0   0   0   0   0   0\n",
+      "    0   3   0  33 240 255 251 255 159   0]\n",
+      " [  1   0   0 170 255 240  46   0   2   1   0   0   0   0   0   0   0   1\n",
+      "    0   3   0  71 255 254 253 255 240  38]\n",
+      " [  0  28 176 255 252 255 223  80   6   0   0   0   0   0   0   0   0   1\n",
+      "    0  22 108 238 255 254 255 253 255 148]\n",
+      " [138 219 252 234 237 235 244 246 190  93   0   2   0   0   0   2   0  76\n",
+      "  162 210 253 241 235 237 237 236 239 223]]\n"
      ]
     }
    ],
    "source": [
     "filelist = glob.glob('./notMNIST_small/test/A/*.png')\n",
+    "print(type(Image.open(filelist[0])))\n",
     "images_0 = np.array([np.array(Image.open(fname)) for fname in filelist])\n",
     "filelist = glob.glob('./notMNIST_small/test/B/*.png')\n",
     "images_1 = np.array([np.array(Image.open(fname)) for fname in filelist])\n",
@@ -58,13 +117,18 @@
     "images_9 = np.array([np.array(Image.open(fname)) for fname in filelist])\n",
     "\n",
     "images = np.vstack((images_0, images_1, images_2, images_3, images_4, images_5, images_6, images_7, images_8, images_9))\n",
-    "print(images_0.shape[0])"
+    "print(images_0[0].shape)\n",
+    "images_0[0].shape = (28, 28, 1)\n",
+    "print(images_0[0].shape)\n",
+    "print(images_0[0])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 56,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cat = np.zeros((images.shape[0],1))\n",
