--- a/src/assignment_1_1.ipynb
+++ b/src/assignment_1_1.ipynb
@@ -227,7 +227,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Add code for using CUDA here if it is available\n",
@@ -462,7 +464,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
