emmory efficiency increased!

--- a/src/assignment_1_2.ipynb
+++ b/src/assignment_1_2.ipynb
@@ -165,11 +165,11 @@
     "    def forward(self, x):\n",
     "        # Here you have to define the forward pass\n",
     "        # Make sure you take care of the skip connections\n",
-    "        y1 = self.maxpool(self.relu(self.bn1(self.conv1(x))))\n",
-    "        y2 = self.lyr1bn2(self.lyr1conv2(self.lyr1relu1(self.lyr1bn1(self.lyr1conv1(y1)))))\n",
-    "        y1 = self.lyr1relu2(y1+y2)\n",
-    "        y2 = self.lyr2bn2(self.lyr2conv2(self.lyr2relu1(self.lyr2bn1(self.lyr2conv1(y1)))))\n",
-    "        x = self.fc(self.lyr2relu2(y1+y2))\n",
+    "        x = self.maxpool(self.relu(self.bn1(self.conv1(x))))\n",
+    "        y1 = self.lyr1bn2(self.lyr1conv2(self.lyr1relu1(self.lyr1bn1(self.lyr1conv1(x)))))\n",
+    "        x = self.lyr1relu2(x+y1)\n",
+    "        y1 = self.lyr2bn2(self.lyr2conv2(self.lyr2relu1(self.lyr2bn1(self.lyr2conv1(x)))))\n",
+    "        x = self.fc(self.lyr2relu2(x+y1))\n",
     "        return x;"
    ]
   },
