Removed ImageFolder, added manual dir listing

--- a/src/assignment_1_2.ipynb
+++ b/src/assignment_1_2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
     "# All import statements go in this block\n",
     "\n",
     "from __future__ import division, print_function, unicode_literals\n",
-    "import sys\n",
+    "import os, sys\n",
     "sys.path.append('/home/tulsyan/apps/miniconda2/lib/python2.7/site-packages/')\n",
     "sys.path.append('/home/tulsyan/apps/miniconda2/lib/python2.7/site-packages/torchvision-0.1.9-py2.7.egg')\n",
     "# print(sys.path)\n",
@@ -40,6 +40,7 @@
     "import torch.nn.functional as tnf\n",
     "from torch.autograd import Variable\n",
     "from torchvision import datasets\n",
+    "from PIL import Image\n",
     "\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt"
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -62,7 +63,7 @@
    "source": [
     "use_gpu = True and torch.cuda.is_available()\n",
     "\n",
-    "batch_size = 100\n",
+    "batch_size = 20\n",
     "num_epochs = 5\n",
     "learning_rate = 0.0005\n",
     "# 5, 0.001: 92%\n",
@@ -105,14 +106,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "class CDATA(torch.utils.data.Dataset):\n",
-    "    # Copy the code from part 1\n",
+    "class CDATA(torch.utils.data.Dataset): # Extend PyTorch's Dataset class\n",
     "    def __init__(self, root_dir, train, transform=None):\n",
     "        # root_dir  - the root directory of the dataset\n",
     "        # train     - a boolean parameter representing whether to return the training set or the test set\n",
@@ -124,30 +122,48 @@
     "        self.root_dir = root_dir\n",
     "        self.train = train\n",
     "        self.transform = transform\n",
+    "        self.images, self.labels = [], []\n",
+    "        \n",
     "        if train:\n",
-    "            root_dir += 'train/'\n",
+    "            root_dir = os.path.join(root_dir, 'train')\n",
     "        else:\n",
-    "            root_dir += 'test/'\n",
-    "        self.imagefolder_dataset = datasets.ImageFolder(root=root_dir,\n",
-    "                                                       transform=transform)\n",
+    "            root_dir = os.path.join(root_dir, 'test')\n",
+    "        \n",
+    "        label_list = os.listdir(root_dir)\n",
+    "        label_list.sort()\n",
+    "        for label in label_list:\n",
+    "            label_dir = os.path.join(root_dir, label)\n",
+    "            # print(ord(label) - ord('A'), len(os.listdir(label_dir)))\n",
+    "            for image in os.listdir(label_dir):\n",
+    "                self.images += [os.path.join(label_dir, image)]\n",
+    "                self.labels += [ord(label) - ord('A')]\n",
+    "        \n",
+    "        # self.imagefolder_dataset = datasets.ImageFolder(root=root_dir, transform=transform)\n",
     "        \n",
     "    def __len__(self):\n",
     "        # return the size of the dataset (total number of images) as an integer\n",
     "        # this should be rather easy if you created a mapping in __init__\n",
     "        \n",
-    "        return self.imagefolder_dataset.__len__()\n",
+    "        return len(self.images)\n",
+    "        # return self.imagefolder_dataset.__len__()\n",
     "        \n",
     "    def __getitem__(self, idx):\n",
     "        # idx - the index of the sample requested\n",
     "        #\n",
     "        # Open the image correspoding to idx, apply transforms on it and return a tuple (image, label)\n",
     "        # where label is an integer from 0-9 (since notMNIST has 10 classes)\n",
-    "        image, label = self.imagefolder_dataset.__getitem__(idx)\n",
-    "        return (image, label)\n",
+    "        \n",
+    "        # image, label = self.imagefolder_dataset.__getitem__(idx)\n",
+    "        # return (image, label)\n",
+    "        \n",
+    "        img = Image.open(self.images[idx])\n",
+    "        img = self.transform(img.convert('RGB'))\n",
+    "        return (img, self.labels[idx])\n",
     "    \n",
+    "dataset_folder='../custom_dataset/'\n",
     "composed_transform = transforms.Compose([transforms.Scale((32,32)),transforms.ToTensor()])\n",
-    "train_dataset = CDATA(root_dir='../custom_dataset/', train=True, transform=composed_transform) # Supply proper root_dir\n",
-    "test_dataset = CDATA(root_dir='../custom_dataset/', train=False, transform=composed_transform) # Supply proper root_dir\n",
+    "train_dataset = CDATA(root_dir=dataset_folder, train=True, transform=composed_transform) # Supply proper root_dir\n",
+    "test_dataset = CDATA(root_dir=dataset_folder, train=False, transform=composed_transform) # Supply proper root_dir\n",
     "\n",
     "train_loader = torch.utils.data.DataLoader(dataset=train_dataset, batch_size=batch_size, shuffle=True)\n",
     "test_loader = torch.utils.data.DataLoader(dataset=test_dataset, batch_size=batch_size, shuffle=False)"
@@ -165,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -232,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -268,9 +284,9 @@
      "output_type": "stream",
      "text": [
       "Files already downloaded and verified\n",
-      "Accuracy of the network on the 10000 test images: 41 %\n",
-      "CPU times: user 2.04 s, sys: 286 ms, total: 2.33 s\n",
-      "Wall time: 2.32 s\n"
+      "Accuracy of the network on the 10000 test images: 39 %\n",
+      "CPU times: user 3.13 s, sys: 383 ms, total: 3.51 s\n",
+      "Wall time: 10.4 s\n"
      ]
     }
    ],
@@ -396,6 +412,9 @@
     "        loss_store += [running_loss]\n",
     "\n",
     "    plt.plot(loss_store)\n",
+    "    plt.title(\"Sum of Loss over subsequent epochs\")\n",
+    "    plt.xlabel(\"Epoch\")\n",
+    "    plt.ylabel(\"Sum of loss\")\n",
     "    plt.show()\n",
     "\n",
     "%time train()\n",
