--- a/src/assignment_2_nonGoT.ipynb
+++ b/src/assignment_2_nonGoT.ipynb
@@ -16,12 +16,22 @@
    "outputs": [],
    "source": [
     "from __future__ import division, print_function, unicode_literals\n",
+    "import cv2\n",
+    "import xml.etree.ElementTree as ET\n",
+    "import cv2\n",
+    "import os, sys\n",
     "import numpy as np\n",
     "import torch\n",
+    "import torch.nn as nn\n",
     "import torch.utils.data\n",
+    "import torchvision\n",
+    "import torchvision.models as models\n",
     "import torchvision.transforms as transforms\n",
+    "import torch.nn.functional as tnf\n",
     "from torch.autograd import Variable\n",
+    "from torchvision import datasets\n",
     "import matplotlib.pyplot as plt\n",
+    "from PIL import Image\n",
     "%matplotlib inline\n",
     "plt.ion()\n",
     "# Import other modules if required\n",
@@ -88,7 +98,65 @@
    "outputs": [],
    "source": [
     "def build_dataset():\n",
-    "    # Begin"
+    "    # Begin\n",
+    "    folders = (\"train\",\"test\")\n",
+    "\n",
+    "    train_classes = {\n",
+    "        'aeroplane' : [],\n",
+    "        'bicycle' : [],\n",
+    "        'bird' : [],\n",
+    "        'boat' : [],\n",
+    "        'bottle' : [],\n",
+    "        'bus' : [],\n",
+    "        'car' : [],\n",
+    "        'cat' : [],\n",
+    "        'chair' : [],\n",
+    "        'cow' : [],\n",
+    "        'diningtable' : [],\n",
+    "        'dog' : [],\n",
+    "        'horse' : [],\n",
+    "        'motorbike' : [],\n",
+    "        'person' : [],\n",
+    "        'pottedplant' : [],\n",
+    "        'sheep' : [],\n",
+    "        'sofa' : [],\n",
+    "        'train' : [],\n",
+    "        'tvmonitor' : []\n",
+    "    }\n",
+    "    test_classes = train_classes\n",
+    "\n",
+    "\n",
+    "    for dir in folders:\n",
+    "        print dir\n",
+    "        raw_image = '../datasets/'+dir+'/JPEGImages/'\n",
+    "        anno_image = '../datasets/'+dir+'/Annotations/'\n",
+    "        train_dataset = '../datasets/train/final/'\n",
+    "        for anno_filename in os.listdir(anno_image):\n",
+    "            tree = \tET.parse(anno_image+anno_filename)\n",
+    "            tmp = anno_filename.split('.')\n",
+    "            img_filename = tmp[0] + '.jpg'\n",
+    "            print anno_filename, img_filename\n",
+    "            img = cv2.imread(raw_image+img_filename)\n",
+    "            root = tree.getroot()\n",
+    "            print root\n",
+    "            for i,object in enumerate(root.findall('object')):\n",
+    "                class1 = str(object.find('name').text)\n",
+    "                bndbox = object.find('bndbox')\n",
+    "                print class1, bndbox[0].text, bndbox[1].text, bndbox[2].text, bndbox[3].text\n",
+    "                class1 = str(object[0].text)\n",
+    "                xmin = int(bndbox[0].text)\n",
+    "                ymin = int(bndbox[1].text)\n",
+    "                xmax = int(bndbox[2].text)\n",
+    "                ymax = int(bndbox[3].text)\n",
+    "                crop_img = img[ymin:ymax, xmin:xmax]\n",
+    "                if dir == 'train':\n",
+    "                    cv2.imwrite(train_dataset+class1+'/'+tmp[0]+'_'+str(i)+'.jpg', crop_img)\n",
+    "                    train_classes[class1].append(crop_img)\n",
+    "                # else:\n",
+    "                # \ttest_classes[class1].append(crop_img)\n",
+    "            # break\n",
+    "\n",
+    "    print train_classes, test_classes"
    ]
   },
   {
@@ -102,12 +170,36 @@
     "class voc_dataset(torch.utils.data.Dataset): # Extend PyTorch's Dataset class\n",
     "    def __init__(self, root_dir, train, transform=None):\n",
     "        # Begin\n",
+    "        build_dataset()\n",
+    "        self.root_dir = root_dir\n",
+    "        self.train = train\n",
+    "        self.transform = transform\n",
+    "        self.images, self.labels = [], []\n",
+    "        \n",
+    "        if train:\n",
+    "            root_dir = os.path.join(root_dir, 'train/final')\n",
+    "        else:\n",
+    "            root_dir = os.path.join(root_dir, 'test')\n",
+    "        \n",
+    "        label_list = os.listdir(root_dir)\n",
+    "        label_list.sort()\n",
+    "        for label in label_list:\n",
+    "            label_dir = os.path.join(root_dir, label)\n",
+    "            label_map = classes.index(label)\n",
+    "            # print(ord(label) - ord('A'), len(os.listdir(label_dir)))\n",
+    "            for image in os.listdir(label_dir):\n",
+    "                self.images += [os.path.join(label_dir, image)]\n",
+    "                self.labels += [label_map]\n",
     "        \n",
     "    def __len__(self):\n",
     "        # Begin\n",
+    "        return len(self.images)\n",
     "        \n",
     "    def __getitem__(self, idx):\n",
     "       # Begin\n",
+    "        img = Image.open(self.images[idx])\n",
+    "        img = self.transform(img) #img.convert('RGB')\n",
+    "        return (img, self.labels[idx])\n",
     "    "
    ]
   },
@@ -130,7 +222,7 @@
     "composed_transform = transforms.Compose([transforms.Scale((resnet_input,resnet_input)),\n",
     "                                         transforms.ToTensor(),\n",
     "                                         transforms.RandomHorizontalFlip()])\n",
-    "train_dataset = voc_dataset(root_dir='', train=True, transform=composed_transform) # Supply proper root_dir\n",
+    "train_dataset = voc_dataset(root_dir='../datasets/', train=True, transform=composed_transform) # Supply proper root_dir\n",
     "test_dataset = voc_dataset(root_dir='', train=False, transform=composed_transform) # Supply proper root_dir\n",
     "\n",
     "train_loader = torch.utils.data.DataLoader(dataset=train_dataset, batch_size=batch_size, shuffle=True)\n",
