--- a/src/assignment_2_nonGoT.ipynb
+++ b/src/assignment_2_nonGoT.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -36,12 +36,12 @@
     "plt.ion()\n",
     "# Import other modules if required\n",
     "\n",
-    "resnet_input = #size of resnet18 input images"
+    "resnet_input = 224 #size of resnet18 input images"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -170,7 +170,7 @@
     "class voc_dataset(torch.utils.data.Dataset): # Extend PyTorch's Dataset class\n",
     "    def __init__(self, root_dir, train, transform=None):\n",
     "        # Begin\n",
-    "        build_dataset()\n",
+    "#         build_dataset()\n",
     "        self.root_dir = root_dir\n",
     "        self.train = train\n",
     "        self.transform = transform\n",
@@ -213,20 +213,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "composed_transform = transforms.Compose([transforms.Scale((resnet_input,resnet_input)),\n",
     "                                         transforms.ToTensor(),\n",
     "                                         transforms.RandomHorizontalFlip()])\n",
     "train_dataset = voc_dataset(root_dir='../datasets/', train=True, transform=composed_transform) # Supply proper root_dir\n",
-    "test_dataset = voc_dataset(root_dir='', train=False, transform=composed_transform) # Supply proper root_dir\n",
+    "# test_dataset = voc_dataset(root_dir='', train=False, transform=composed_transform) # Supply proper root_dir\n",
     "\n",
     "train_loader = torch.utils.data.DataLoader(dataset=train_dataset, batch_size=batch_size, shuffle=True)\n",
-    "test_loader = torch.utils.data.DataLoader(dataset=test_dataset, batch_size=batch_size, shuffle=False)"
+    "# test_loader = torch.utils.data.DataLoader(dataset=test_dataset, batch_size=batch_size, shuffle=False)"
    ]
   },
   {
