model saved! sliding window and maximum supression code written! not tested

--- a/src/assignment_2_nonGoT.ipynb
+++ b/src/assignment_2_nonGoT.ipynb
@@ -1221,6 +1221,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "torch.save(resnet18.state_dict(), 'resnet18_model.pkl')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1231,21 +1242,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-11-273e3b1dc76d>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-273e3b1dc76d>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    # Begin\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def sliding_window():\n",
-    "    # Begin"
+    "def sliding_window(image, stepSize=15, windowSize=(45,45)):\n",
+    "    # Begin\n",
+    "    arr = []\n",
+    "    for y in range(0, image.shape[0], stepSize):\n",
+    "        for x in range(0, image.shape[1], stepSize):\n",
+    "            arr.append((x, y, x + windowSize[0], y + windowSize[1], image[y:y + windowSize[1], x:x + windowSize[0]]))\n",
+    "    return arr"
    ]
   },
   {
@@ -1257,14 +1264,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def non_maximum_supression(boxes,threshold = 0.3):\n",
-    "    # "
+    "    # Begin\n",
+    "    # if there are no boxes, return an empty list\n",
+    "    if len(boxes) == 0:\n",
+    "        return []\n",
+    " \n",
+    "    # initialize the list of picked indexes\n",
+    "    pick = []\n",
+    "\n",
+    "    # grab the coordinates of the bounding boxes\n",
+    "    x1 = boxes[:,0]\n",
+    "    y1 = boxes[:,1]\n",
+    "    x2 = boxes[:,2]\n",
+    "    y2 = boxes[:,3]\n",
+    "\n",
+    "    # compute the area of the bounding boxes and sort the bounding\n",
+    "    # boxes by the bottom-right y-coordinate of the bounding box\n",
+    "    area = (x2 - x1 + 1) * (y2 - y1 + 1)\n",
+    "    idxs = np.argsort(y2)\n",
+    "    \n",
+    "    # keep looping while some indexes still remain in the indexes\n",
+    "    # list\n",
+    "    while len(idxs) > 0:\n",
+    "        # grab the last index in the indexes list, add the index\n",
+    "        # value to the list of picked indexes, then initialize\n",
+    "        # the suppression list (i.e. indexes that will be deleted)\n",
+    "        # using the last index\n",
+    "        last = len(idxs) - 1\n",
+    "        i = idxs[last]\n",
+    "        pick.append(i)\n",
+    "        suppress = [last]\n",
+    "        \n",
+    "        # loop over all indexes in the indexes list\n",
+    "        for pos in xrange(0, last):\n",
+    "            # grab the current index\n",
+    "            j = idxs[pos]\n",
+    "\n",
+    "            # find the largest (x, y) coordinates for the start of\n",
+    "            # the bounding box and the smallest (x, y) coordinates\n",
+    "            # for the end of the bounding box\n",
+    "            xx1 = max(x1[i], x1[j])\n",
+    "            yy1 = max(y1[i], y1[j])\n",
+    "            xx2 = min(x2[i], x2[j])\n",
+    "            yy2 = min(y2[i], y2[j])\n",
+    "\n",
+    "            # compute the width and height of the bounding box\n",
+    "            w = max(0, xx2 - xx1 + 1)\n",
+    "            h = max(0, yy2 - yy1 + 1)\n",
+    "\n",
+    "            # compute the ratio of overlap between the computed\n",
+    "            # bounding box and the bounding box in the area list\n",
+    "            overlap = float(w * h) / area[j]\n",
+    "\n",
+    "            # if there is sufficient overlap, suppress the\n",
+    "            # current bounding box\n",
+    "            if overlap > threshold:\n",
+    "                suppress.append(pos)\n",
+    "\n",
+    "        # delete all indexes from the index list that are in the\n",
+    "        # suppression list\n",
+    "        idxs = np.delete(idxs, suppress)\n",
+    "\n",
+    "    # return only the bounding boxes that were picked\n",
+    "    return boxes[pick]"
    ]
   },
   {
