added a part in test phase

--- a/src/assignment_2_nonGoT.ipynb
+++ b/src/assignment_2_nonGoT.ipynb
@@ -237,8 +237,8 @@
     "        for obj in root.findall('object'):\n",
     "            label = obj.find('name').text\n",
     "            bndbox = obj.find('bndbox')\n",
-    "            local_annot += [(label, [int(bndbox.find(pt).text) for pt in self.bndbox_pts])]\n",
-    "            \n",
+    "            local_annot += [(classes.index(label), [int(bndbox.find(pt).text) for pt in self.bndbox_pts])]\n",
+    "        local_annot.sort(key=lambda tup: tup[0])\n",
     "        return (img, local_annot)"
    ]
   },
@@ -292,6 +292,12 @@
     "composed_transform = transforms.Compose([transforms.Scale((resnet_input,resnet_input)),\n",
     "                                         transforms.RandomHorizontalFlip(),\n",
     "                                         transforms.ToTensor()])\n",
+    "\n",
+    "composed_transform_test = transforms.Compose([transforms.ToPILImage(),\n",
+    "                                         transforms.Scale((resnet_input,resnet_input)),\n",
+    "                                         transforms.RandomHorizontalFlip(),\n",
+    "                                         transforms.ToTensor()])\n",
+    "\n",
     "\n",
     "dataset_dir = '../datasets/'\n",
     "train_dataset = voc_dataset_train(root_dir=dataset_dir, train=True, transform=composed_transform) # Supply proper root_dir\n",
@@ -1302,8 +1308,9 @@
    },
    "outputs": [],
    "source": [
-    "def sliding_window(image, stepSize=15, windowSize=(45,45)):\n",
+    "def sliding_window(img, stepSize=16, windowSize=(64,64)):\n",
     "    # Begin\n",
+    "    image = cv2.copyMakeBorder(img,windowSize[0]/2,windowSize[0]/2,windowSize[1]/2,windowSize[1]/2,cv2.BORDER_CONSTANT,value=BLACK)\n",
     "    arr = []\n",
     "    for y in range(0, image.shape[0]-windowSize[0], stepSize):\n",
     "        for x in range(0, image.shape[1]-windowSize[1], stepSize):\n",
@@ -1410,7 +1417,22 @@
    "source": [
     "def test(resnet18):\n",
     "    # Write loops for testing the model on the test set\n",
-    "    # Also print out the accuracy of the model"
+    "    # Also print out the accuracy of the model\n",
+    "    for i,(img, anno) in enumerate(test_loader):\n",
+    "        windows = sliding.window(image=img) # windows contains bounding boxes\n",
+    "        outputs = [] # to store output of the form (class_index, class_score, xmin, ymin, xmax, ymax) \n",
+    "        for j in enumerate(windows):  # enumerating on bounding boxes\n",
+    "            img_tmp = windows[j][4]  # img_tmp contains image corresponding to jth bounding box \n",
+    "            img_tmp = composed_transform_test(img_tmp)  # apply transformtions\n",
+    "            img_tmp = [img_tmp] #to make in safe form\n",
+    "            img_tmp = Variable(img_tmp)  # change type to variable\n",
+    "            if use_gpu:\n",
+    "                img_tmp = img_tmp.cuda()\n",
+    "            output = model(img_tmp) # output is 1x21 matrix\n",
+    "            for col in enumerate(output[0]):\n",
+    "                outputs.append((col, output[0][col], windows[j][0], windows[j][1], windows[j][2], windows[j][3]))\n",
+    "            outputs.append(model(img_tmp))            \n",
+    "        outputs.sort(key=lambda tup: tup[0]) # now output contains a sorted array of 6-length tuple"
    ]
   },
   {
@@ -1450,7 +1472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
