added a part in test phase-2

--- a/src/assignment_2_nonGoT.ipynb
+++ b/src/assignment_2_nonGoT.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -252,15 +252,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[u'aeroplane', u'bicycle', u'bird', u'boat', u'bottle', u'bus', u'car', u'cat', u'chair', u'cow', u'diningtable', u'dog', u'horse', u'motorbike', u'person', u'pottedplant', u'sheep', u'sofa', u'train', u'tvmonitor']\n",
-      "[[('dog',), [\n",
+      "[u'__background__', u'aeroplane', u'bicycle', u'bird', u'boat', u'bottle', u'bus', u'car', u'cat', u'chair', u'cow', u'diningtable', u'dog', u'horse', u'motorbike', u'person', u'pottedplant', u'sheep', u'sofa', u'train', u'tvmonitor']\n",
+      "[[\n",
+      " 12\n",
+      "[torch.LongTensor of size 1]\n",
+      ", [\n",
       " 48\n",
       "[torch.LongTensor of size 1]\n",
       ", \n",
@@ -272,7 +275,10 @@
       ", \n",
       " 371\n",
       "[torch.LongTensor of size 1]\n",
-      "]], [('person',), [\n",
+      "]], [\n",
+      " 15\n",
+      "[torch.LongTensor of size 1]\n",
+      ", [\n",
       " 8\n",
       "[torch.LongTensor of size 1]\n",
       ", \n",
@@ -333,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -348,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -361,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -1282,13 +1288,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "torch.save(resnet18.state_dict(), 'resnet18_model.pkl')"
+    "# torch.save(resnet18.state_dict(), 'resnet18_model.pkl')\n",
+    "resnet18.load_state_dict(torch.load('resnet18_model.pkl'))"
    ]
   },
   {
@@ -1302,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -1310,7 +1317,7 @@
    "source": [
     "def sliding_window(img, stepSize=16, windowSize=(64,64)):\n",
     "    # Begin\n",
-    "    image = cv2.copyMakeBorder(img,windowSize[0]/2,windowSize[0]/2,windowSize[1]/2,windowSize[1]/2,cv2.BORDER_CONSTANT,value=BLACK)\n",
+    "    image = cv2.copyMakeBorder(img,32,32,32,32,cv2.BORDER_CONSTANT,value=[0,0,0])\n",
     "    arr = []\n",
     "    for y in range(0, image.shape[0]-windowSize[0], stepSize):\n",
     "        for x in range(0, image.shape[1]-windowSize[1], stepSize):\n",
@@ -1328,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -1409,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -1419,9 +1426,15 @@
     "    # Write loops for testing the model on the test set\n",
     "    # Also print out the accuracy of the model\n",
     "    for i,(img, anno) in enumerate(test_loader):\n",
-    "        windows = sliding.window(image=img) # windows contains bounding boxes\n",
+    "        print (\"i: \", i)\n",
+    "#         imshow(img)\n",
+    "        img = img.numpy()\n",
+    "        print (img.shape)\n",
+    "        \n",
+    "        windows = sliding_window(img) # windows contains bounding boxes\n",
     "        outputs = [] # to store output of the form (class_index, class_score, xmin, ymin, xmax, ymax) \n",
     "        for j in enumerate(windows):  # enumerating on bounding boxes\n",
+    "            print (j)\n",
     "            img_tmp = windows[j][4]  # img_tmp contains image corresponding to jth bounding box \n",
     "            img_tmp = composed_transform_test(img_tmp)  # apply transformtions\n",
     "            img_tmp = [img_tmp] #to make in safe form\n",
@@ -1438,9 +1451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%time test(resnet18)"
