--- a/src/assignment_2_nonGoT.ipynb
+++ b/src/assignment_2_nonGoT.ipynb
@@ -1471,36 +1471,23 @@
     "    count = 0\n",
     "    for i,(img, anno) in enumerate(test_loader):\n",
     "        count = count + 1\n",
-    "        print (\"i: \", i)\n",
-    "#         imshow(img)\n",
-    "#         composed_transform_test3 = transforms.Compose([transforms.ToPILImage()])\n",
-    "#         img1 = composed_transform_test3(img[0])\n",
-    "#         print (\"test: \", img)\n",
-    "#         print(img.shape)\n",
     "        img = img[0].numpy()\n",
-    "#         print (img.shape)\n",
     "        img = np.swapaxes(img, 0, 1)\n",
-    "#         print (img.shape)\n",
     "        img = np.swapaxes(img, 1, 2)\n",
-    "#         print (img.shape)\n",
-    "        \n",
     "        windows = sliding_window(img) # windows contains bounding boxes\n",
-    "#         print(windows[0])\n",
     "        outputs = [] # to store output of the form (class_index, class_score, xmin, ymin, xmax, ymax) \n",
     "        for j,k in enumerate(windows):  # enumerating on bounding boxes\n",
-    "            print (j)\n",
     "            img_tmp = windows[j][4]  # img_tmp contains image corresponding to jth bounding box\n",
     "            print (\"test: \", windows[j][0], windows[j][1], windows[j][2], windows[j][3])\n",
     "            img_tmp = image = Image.fromarray(img_tmp.astype('uint8'), 'RGB')\n",
     "            img_tmp = composed_transform_test(img_tmp)  # apply transformtions\n",
-    "#             print(img_tmp.shape)\n",
     "            img_tmp1 = img_tmp.resize_(1,3,224,224)\n",
-    "#             img_tmp = [img_tmp] #to make in safe form\n",
     "            img_tmp = Variable(img_tmp1)  # change type to variable\n",
-    "#             if use_gpu:\n",
-    "#                 img_tmp = img_tmp.cuda()\n",
+    "            \n",
+    "            if use_gpu:\n",
+    "                img_tmp = img_tmp.cuda()\n",
     "            output = resnet18(img_tmp) # output is 1x21 matrix\n",
-    "#             print(output)\n",
+    "            \n",
     "            for col, o in enumerate(output[0]):\n",
     "                outputs.append((col, output[0][col], windows[j][0], windows[j][1], windows[j][2], windows[j][3]))            \n",
     "        outputs.sort(key=lambda tup: (tup[0], tup[1])) # now output contains a sorted array of 6-length tuple\n",
@@ -1538,13 +1525,13 @@
     "                        if iou > iou_thresh:\n",
     "                            flag = True\n",
     "                            break\n",
-    "                    seen++\n",
+    "                    seen = seen + 1\n",
     "                    if flag == True:\n",
-    "                        approved++\n",
+    "                        approved = approved + 1\n",
     "                        precision = precision + approved/seen\n",
     "                average_precision = precision/approved\n",
     "                mean_average_precision = mean_average_precision + average_precision\n",
-    "                no_of_classes++\n",
+    "                no_of_classes = no_of_classes + 1\n",
     "        mean_average_precision = mean_average_precision/no_of_classes\n",
     "        mmap = mmap + mean_average_precision\n",
     "    \n",
