cleaned the code-2

--- a/src/assignment_2_nonGoT.ipynb
+++ b/src/assignment_2_nonGoT.ipynb
@@ -1514,7 +1514,7 @@
     "        mean_average_precision = 0\n",
     "        for i, temp1 in enumerate(anno_classes):\n",
     "            average_precision = 0\n",
-    "            if anno_classes[i].length > 0:\n",
+    "            if len(anno_classes[i]) > 0:\n",
     "                for j, temp2 in enumerate(output_classes[i]):\n",
     "                    flag = False\n",
     "                    seen = 0\n",
