--- a/src/assignment_2_nonGoT.ipynb
+++ b/src/assignment_2_nonGoT.ipynb
@@ -1438,7 +1438,7 @@
     "    intersect_area = area_intersection(rect1, rect2)\n",
     "    if intersect_area == None:\n",
     "        intersect_area = 0\n",
-    "    total_area = area(rect1) + area(rect2)\n",
+    "    total_area = area(rect1) + area(rect2) - intersect_area\n",
     "    return intersect_area/total_area"
    ]
   },
@@ -1481,7 +1481,7 @@
     "            print (\"test: \", windows[j][0], windows[j][1], windows[j][2], windows[j][3])\n",
     "            img_tmp = image = Image.fromarray(img_tmp.astype('uint8'), 'RGB')\n",
     "            img_tmp = composed_transform_test(img_tmp)  # apply transformtions\n",
-    "            img_tmp1 = img_tmp.resize_(1,3,224,224)\n",
+    "            img_tmp1 = img_tmp.resize_(1,3,resnet_input,resnet_input)\n",
     "            img_tmp = Variable(img_tmp1)  # change type to variable\n",
     "            \n",
     "            if use_gpu:\n",
@@ -1503,7 +1503,6 @@
     "        iou_thresh = # intersection over union threshold\n",
     "        \n",
     "        for i, temp in enumerate(outputs):\n",
-    "            if outputs[i][1] > thresh:\n",
     "                output_classes[outputs[i][0]].append((outputs[i][2], outputs[i][3], outputs[i][4], outputs[i][5]))\n",
     "                \n",
     "        for i, temp in enumerate(anno):\n",
